Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-85260

QSG Render Thread crash

XMLWordPrintable

    • Android, iOS/tvOS/watchOS, Linux/Wayland
    • 4fe9e0ed027134a833b2243597a2ccd00987b559 (qt/qtlocation/5.15) 861e372b6ad81570d4f496e42fb25a6699b72f2f (qt/qtlocation/5.15)

       

      QSGNode::removeAllChildNodes() + 7613188       
      QGeoMapObjectQSGSupport::updateMapObjects(QSGNode*, QQuickWindow*) + 5776488     
      QGeoMapObjectQSGSupport::updateMapObjects(QSGNode*, QQuickWindow*) + 5776488     
      QGeoTiledMapLabs::updateSceneGraph(QSGNode*, QQuickWindow*) + 5762148         
      QDeclarativeGeoMap::updatePaintNode(QSGNode*, QQuickItem::UpdatePaintNodeData*) + 5478004         
      QQuickWindowPrivate::updateDirtyNode(QQuickItem*) + 8392696         
      QQuickWindowPrivate::updateDirtyNodes() + 8327200         
      QQuickWindowPrivate::syncSceneGraph() + 8325580         
      QSGRenderThread::sync(bool, bool) + 8018720         
      QSGRenderThread::syncAndRender(QImage*) + 8016176         
      QSGRenderThread::run() + 8021356         
      QThreadPrivate::start(void*) + 16714324

       This crash started to appear after migrating from Qt 5.13.1 to Qt 5.15.0

      Didn't find anything related to needed code changes regarding Map QML component

      We use OSM plugin.  The crash appears after we display the map and a Polyline with a route the second time. The first time it's displayed ok. Any guidance on how to fix this?

      On iOS is easier to reproduce than on Android.

        1. MapTest.zip
          2 kB
          Ionel Manolache
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            piotrmi Piotr Mikolajczyk
            victor.corchez Victor Corchez
            Votes:
            3 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes