Fix crash when showing Map QML comp. for 2nd+ time

Crash caused by storing pointer to a node that could be deleted elsewhere

Fixes: QTBUG-85260
Change-Id: I871123322fac84b8bf91e9bab8ecad08e75c2854
Reviewed-by: Paolo Angelelli <paolo.angelelli.qt@gmail.com>